# Ergo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  module_list.md  module_list.yaml
.github/workflows/: ci.yml
benchmarks/: bench_common.h  bench_curve.cpp  bench_particle_cpu.cpp
cmake/: ErgoDependencies.cmake  FindFMOD.cmake
docs/design/: input_system.md
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
review/2026-05-15/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md
review/2026-05-17/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md
review/2026-05-30/: CODE_CONVENTIONS_REVIEW.md
shaders/: particle.frag  particle.vert  particle_spawn.comp  particle_update.comp  stage.frag  stage.vert
spec/module/: actor.md  audio.md  bind.md  blackboard.md  combo_counter.md  compose.md  event.md  frame.md  inspector.md  log.md  network.md  particle.md  physics2d.md  profile.md  render.md  scene.md  score.md  sound.md  stickfig.md  timing_judge.md  ui.md  ui_layout.md  vector.md
spec/setup/: README.md  branch-and-pr.md  build-cpp.md  config-reference.md  external-plugins.md  plugin-data-roots.md  run-tools-ergo.md  third-party-deps.md
spec/tool/: acstage.md  anatomia.md  ergo.md  placer.md  render_pipeline.md  render_pipeline_system_b.md  rive.md  vinculum.md
src/: actor_composer.cpp  audio_decoder.cpp  audio_engine.cpp  compose_dummy.cpp  compose_system.cpp  connection_pool.cpp  dns_resolver.cpp  event_dummy.cpp  event_queue.cpp  event_sequencer.cpp  hot_reloader.cpp  http_client.cpp  network_dummy.cpp  network_system.cpp  quic_commander.cpp  scene_builder.cpp  socket.cpp  sound_dummy.cpp  stream_channel.cpp  transpiler.cpp  types.cpp  waveform_processor.cpp
src/actor/: actor.cpp  actor_dummy.cpp
src/audio/: audio_engine_dummy.cpp  audio_engine_fmod.cpp
src/bind/: actor_topology.h  bind_dummy.cpp  bind_engine.cpp  json_min.cpp  pending_write_queue.h  types.cpp  variable_registry.h  ws_client.cpp  ws_client.h
src/blackboard/: blackboard.cpp  blackboard_dummy.cpp
src/cast/: scene.cpp
src/character/: brain.cpp  effect_manager.cpp  extra_force.cpp  gravity.cpp  move_control.cpp  move_manager.cpp  transform_brain.cpp  turn_manager.cpp  update_component_manager.cpp
src/combo_counter/: combo_counter.cpp
src/common/: json_min.cpp
src/custos/: custos_module.cpp  http_server.cpp  http_server.h  png_writer.cpp  png_writer.h
src/frame/: counter.cpp  frame_dummy.cpp
src/gpu_particle/: curve.cpp  curve_dummy.cpp  emitter_descriptor.cpp  emitter_descriptor_dummy.cpp  particle_system.cpp  particle_system_dummy.cpp
src/health/: health.cpp
src/http/: curl_client.cpp  curl_global.cpp  curl_global.hpp
src/input/: double_buffer_dummy.cpp  gamepad_device.cpp  gamepad_device_dummy.cpp  input_buffer.cpp  input_buffer_dummy.cpp  input_system.cpp  input_system_dummy.cpp  keyboard_device.cpp  keyboard_device_dummy.cpp  mouse_device.cpp  mouse_device_dummy.cpp  observer.cpp  observer_dummy.cpp  polling_thread.cpp  polling_thread_dummy.cpp  usb_device.cpp  usb_device_dummy.cpp
src/inspector/: command_queue.cpp  inspector.cpp  inspector_dummy.cpp  json_min.cpp  server_dummy.cpp  server_posix.cpp  tweakable.cpp  ws_handshake.cpp
src/io/: file.cpp  file_dummy.cpp
src/log/: log.cpp  log_dummy.cpp
src/math/: math.cpp
src/particle/: effect_config.cpp  particle_dummy.cpp  particle_system.cpp  renderer.cpp
src/physics2d/: body.cpp  narrowphase.cpp  shape.cpp  solver.cpp  world.cpp
src/profile/: profile.cpp  profile_dummy.cpp
src/render/: asset_paths.cpp  frame_composer.cpp  frame_context.cpp  screenshot_bridge.cpp  stage_renderer.cpp
src/scene/: scene.cpp
src/score/: score.cpp
src/shuriken_migrator/: gpu_target.cpp  migrator.cpp
src/sound/: audio_decoder.cpp  audio_engine.cpp  audio_stream.cpp  quantizer.cpp  waveform_processor.cpp
src/stickfig/: stick_figure.cpp
src/timing_judge/: timing_judge.cpp
src/ui/: gradient.cpp  line_glow.cpp  nine_slice.cpp  svg_raster.cpp
src/ui_kit/: ui_kit.cpp
src/ui_layout/: binding.cpp  document.cpp  hittest.cpp  json_codec.cpp  layout_solver.cpp  render_emitter.cpp  ui_layout.cpp
src/vector/: bind.cpp  extruder.cpp  flatten.cpp  morph.cpp  path.cpp  svg_parser.cpp  tessellator.cpp  vector_mesh.cpp  vector_scene.cpp
src/world_time/: world_time.cpp  world_time_dummy.cpp
template/: module_template.md  platform_list.md
tests/: test_actor_composer.cpp  test_audio_decoder.cpp  test_compose_system.cpp  test_connection_pool.cpp  test_dns_resolver.cpp  test_event_queue.cpp  test_event_sequencer.cpp  test_hot_reloader.cpp  test_http_client.cpp  test_network_system.cpp  test_quic_commander.cpp  test_scene_builder.cpp  test_socket.cpp  test_stream_channel.cpp  test_transpiler.cpp
tests/actor/: test_actor.cpp
tests/audio/: test_ergo_audio.cpp
tests/bind/: test_bind_engine.cpp  test_json_min.cpp  test_types.cpp
tests/blackboard/: test_blackboard.cpp
tests/cast/: test_scene.cpp
tests/character/: test_character_brain.cpp  test_character_components.cpp
tests/combo_counter/: test_combo_counter.cpp
tests/custos/: test_custos_module.cpp  test_http_server.cpp
tests/frame/: test_counter.cpp
tests/gpu_particle/: test_curve.cpp  test_emitter_descriptor.cpp  test_particle_system.cpp
tests/health/: test_health.cpp
tests/http/: test_http_client.cpp
tests/input/: test_double_buffer.cpp  test_gamepad_device.cpp  test_input_buffer.cpp  test_input_system.cpp  test_keyboard_device.cpp  test_mouse_device.cpp  test_observer.cpp  test_polling_thread.cpp  test_usb_device.cpp
tests/inspector/: test_command_queue.cpp  test_inspector.cpp  test_json_min.cpp  test_tweakable.cpp  test_ws_handshake.cpp
tests/io/: test_file.cpp
tests/log/: test_log.cpp
(+270 files in other folders)
